# xformer

./: .gitignore  .graphify_step2.py  .graphify_step3a.py  .graphify_step3c.py  .graphify_step4.py  .graphify_step5.py  0207refactoring.md  ACCUM-PER-STEP-INCREMENT.md  ACCUM-RTRIG-HARDWARE-TEST.md  ACCUMULATOR-METROPOLIX-FEATURE-COMPARISON.md  ACCUMULATOR-PER-STEP-TICKS-TDD.md  ACCUMULATOR-RESET-MODE-TDD.md  AGENTS.md  ALGOS.md  BUG-CV-GLIDE.md  BUG-FIX-PROGRESS-REPORT.md  BUG-GATE-LED.md  BUG-MONITOR-TUE.md  BUG-REPORT-ACCUMULATOR-TRIGGER-MODES.md  BUG-TRILL-TEMPO.md  BUG1-THOROUGH-ANALYSIS-AND-TDD-PLAN.md  CHANGELOG.md  CLAUDE-TUESDAY.md  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  COMPLETE.md  COWORK.md  CTestTestfile.cmake  CURVE-GATE-IMPROVEMENTS-SUMMARY.md  CURVE-GATE-MUSICAL-GUIDE.md  CURVE-GATE-PRESETS-GUIDE.md  DES-ALGO.md  DES-Minim.md  DES-Minimal-algo.md  DISCRETEMAP_MANUAL.md  DOC-chords.md  DOC-route-shaper.md  DONE.md  ER.md  (+183 more)
.claude/: settings.json
.cowork/: AGENTS.md  Index.md  config.json  search.db
.graphify-teletype-scope/: teletype
.playwright-mcp/: page-2026-06-11T01-03-41-927Z.yml  page-2026-06-11T01-08-44-727Z.yml  page-2026-06-11T01-16-45-922Z.yml  page-2026-06-11T01-31-28-659Z.yml  page-2026-06-11T01-36-09-575Z.yml  page-2026-06-11T01-41-40-794Z.yml  page-2026-06-11T17-19-05-475Z.yml  page-2026-06-11T17-26-33-507Z.yml  page-2026-06-11T17-37-09-573Z.yml  page-2026-06-11T18-14-59-221Z.yml
.scratch/: append_review.py  append_stability.py  architecture-current-vs-proposed.html  clock-models-compared.html  engine-update-current-vs-proposed.html  live-page-concepts.py  param-census.html  param-groups.html  per-type-tables.html  phaseflux-cycle-distribution.html  phaseflux-pitch-curve.html  phaseflux-timeline-explainer.html  phaseflux-vs-notetrack.html  refactor-landscape.html  reset-vocabulary.html  reset-vs-restart-per-track.html  routing-design.html  routing-matrix-params.html  routing-mod-matrix-research.html  routing-proposed-structure.html  sequoa.html  spring-modulator.html  stochastic-knob-ownership.html  substrate-matrix.html  track-clock-explainer.html  track-phase-reset.html  tt2-op-coverage.html
.tasks/: STATUS.md  engine-subobject-size-comparison.md  modulator-enhancements.md  other-forks-improvements.md  spring-modulator.md  stability-fixes.md  stochastic-track.md  teletype-edit-page.md  teletype-file-reliability.md  tt2-io-ui.md  tt2-pattern-shortcuts.md  tt2-script-editor-undo.md  tt2-script-save-load.md  tt2-track-copy-ui.md  tuesday-turing-algo.md  ui-keypress-helper-extraction.md  usb-keyboard-manager-refactor.md  usb-keyboard-sim-parity.md  vinx-modulove-improvements.md
ALGO-RESEARCH/: MUSIC-ALGOS.md  New-ALGO-Part2.md  New-ALGO.md  TUESDAY-ALGORITHMS.md  TUESDAY-TRACK-IMPROVED-TDD-PLAN.md  Tuesday-performer-plan.md  Tuesday-research.md
Algo-backup/: ACID_Algorithm_Backup.cpp  AMBIENT_Algorithm_Backup.cpp  APHEX_Algorithm_Backup.cpp  AUTECHRE_Algorithm_Backup.cpp  CHIPARP_Algorithm_Backup.cpp  DRILL_Algorithm_Backup.cpp  DRONE_Algorithm_Backup.cpp  FUNK_Algorithm_Backup.cpp  GOACID_Algorithm_Backup.cpp  KRAFT_Algorithm_Backup.cpp  MARKOV_Algorithm_Backup.cpp  MINIMAL_Algorithm_Backup.cpp  PHASE_Algorithm_Backup.cpp  RAGA_Algorithm_Backup.cpp  README.md  SNH_Algorithm_Backup.cpp  STEPWAVE_Algorithm_Backup.cpp  STOMPER_Algorithm_Backup.cpp  TECHNO_Algorithm_Backup.cpp  TEST_Algorithm_Backup.cpp  TRITRANCE_Algorithm_Backup.cpp  WOBBLE_Algorithm_Backup.cpp
Algo-tester/: CMakeLists.txt  README.md  build.sh
Algo-tester/include/: AlgoVisualization.h  AlgorithmProcessor.h  AudioEngine.h  dj_fft.h
Algo-tester/src/: AlgoVisualization.cpp  AlgorithmProcessor.cpp  AudioEngine.cpp  main.cpp
Curve-Analysis/: AudioEngine.h  CMakeCache.txt  CMakeLists.txt  CURVE-ANALYSIS.md  Curve.h  CurveProcessor.cpp  CurveProcessor.h  Makefile  cmake_install.cmake  curve_analysis  dj_fft.h  main.cpp
RESEARCH-HARMONY/: HARMONIAG.md  HARMONY-ARCHITECTURE-ANALYSIS.md  HARMONY-DONE.md  HARMONY-HARDWARE-CAPABILITIES.md  HARMONY-IDEATION.md  HARMONY-TDD-PLAN.md  WORKING-TDD-HARMONY-PLAN.md  chords.cpp
algo-wasm/: README.md  tuesday_wasm.cpp  wasm-build.sh
doc/: RESOURCE_ANALYSIS.md  accumulator-v2-spec.md  arpeggiator-spec.md  fractal-track-research.md  o-c-applets-analysis.md  parent-child-track-research.md  tb303-algo-track-implementation.md
doc_archive/: IDEATION.md  PULSE-COUNT-TODO.md  PULSE_COUNT_IMPLEMENTATION.md  README.md
docs/: accumulator-v2-spec.md  codex-stochastic-c-major-pitch-roll.html  codex-stochastic-one-note-pitch.html  editpages-flash.md  flash-optimization.md  fractal-track-options-comparison.html  framebuffer-ccmram.md  glm-stoch-pitch-dice.html  glm-stoch-pitch-explorer.html  glm-stoch-pitch.html  glm-stoch-rhythm-explorer.html  global-teletype.md  harmony-spec.md  midi-output-spec.md  modulators-guide.html  new-teleops.md  node-spec.md  norns-sequencers.md  performer-architecture.md  pf-flash.md  phaseflux-guide.html  phaseflux-spec.md  physical-track.md  routing-flash.md  (+19 more)
src/tests/unit/sequencer/: CMakeLists.txt  CTestTestfile.cmake  EngineTestFixture.h  Makefile  TestAccumulator.cpp  TestAccumulatorConfig.cpp  TestAccumulatorModulation.cpp  TestAccumulatorOps.cpp  TestAccumulatorSerialization.cpp  TestClockWrap.cpp  TestCompilationFlags.cpp  TestCurveSequencePageF4Key.cpp  TestCurveSequencePagePageKey.cpp  TestCurveTrack.cpp  TestCurveTrackEngineGlobalPhase.cpp  TestCurveTrackEnginePhase.cpp  TestCurveTrackLfoShapes.cpp  TestCurveTrackLfoShapesIntegration.cpp  TestCurveTrackPatterns.cpp  TestCurveTrackSerialization.cpp  TestCurveWavefolderRouting.cpp  TestCvRouteLaneGuard.cpp  TestDiscreteMapSequence.cpp  TestDiscreteMapTrackEngine.cpp  TestEngineFixture.cpp  TestFractalSequenceSerialization.cpp  TestFractalTrackEngine.cpp  TestGateMode.cpp  TestGateRotation.cpp  TestGateStruct.cpp  TestGeodeConfig.cpp  TestGeodeEngineFire.cpp  TestHarmonyEngine.cpp  TestHarmonyInversionIssue.cpp  TestHarmonyVoicing.cpp  TestHelicalAr.cpp  TestKeyboardMapping.cpp  TestLinkingRemovalSerialization.cpp  TestMidiMessage.cpp  TestMidiOutput.cpp  (+138 more)
(+924 files in other folders)
