include_directories(../../../apps/sequencer)
include_directories(../../../apps/sequencer/model) # Add include for model files
include_directories(..) # Add current directory for utils

# Modify register_test to link against sequencer_shared
function(register_sequencer_test test file)
    add_executable(${test} ${file} ../../../apps/sequencer/model/TuesdaySequence.cpp)
    target_link_libraries(${test} core sequencer_shared) # Link against sequencer_shared
    platform_postprocess_executable(${test})
    add_test(NAME ${test} COMMAND ${test})
endfunction(register_sequencer_test)

register_sequencer_test(TestCurve TestCurve.cpp)
register_sequencer_test(TestCurveTrack TestCurveTrack.cpp)
register_sequencer_test(TestCurveTrackSerialization TestCurveTrackSerialization.cpp)
register_sequencer_test(TestCurveWavefolderRouting TestCurveWavefolderRouting.cpp)
register_sequencer_test(TestScale TestScale.cpp)
register_sequencer_test(TestAccumulator TestAccumulator.cpp)
register_sequencer_test(TestAccumulatorSerialization TestAccumulatorSerialization.cpp)
register_sequencer_test(TestNoteSequence TestNoteSequence.cpp)
# Disabled: requires complex mock dependencies for hardware drivers
# register_sequencer_test(TestNoteTrackEngine TestNoteTrackEngine.cpp)
# register_sequencer_test(TestAccumulatorModulation TestAccumulatorModulation.cpp)
register_sequencer_test(TestPulseCount TestPulseCount.cpp)
register_sequencer_test(TestGateMode TestGateMode.cpp)
register_sequencer_test(TestGateStruct TestGateStruct.cpp)
register_sequencer_test(TestRTrigAccumTicking TestRTrigAccumTicking.cpp)
register_sequencer_test(TestRTrigEdgeCases TestRTrigEdgeCases.cpp)
register_sequencer_test(TestCompilationFlags TestCompilationFlags.cpp)
# Disabled: experimental test with outdated API calls
# register_sequencer_test(TestRTrigSpreadAccumTiming TestRTrigSpreadAccumTiming.cpp)
register_sequencer_test(TestHarmonyEngine TestHarmonyEngine.cpp)
register_sequencer_test(TestHarmonyIntegration TestHarmonyIntegration.cpp)
register_sequencer_test(TestHarmonyInversionIssue TestHarmonyInversionIssue.cpp)
register_sequencer_test(TestHarmonyInversionBug TestHarmonyInversionBug.cpp)
register_sequencer_test(TestHarmonyVoicing TestHarmonyVoicing.cpp)
register_sequencer_test(TestModel TestModel.cpp)
register_sequencer_test(TestTuesdayTrack TestTuesdayTrack.cpp)
register_sequencer_test(TestTuesdayTrackIntegration TestTuesdayTrackIntegration.cpp)
register_sequencer_test(TestTuesdayTrackEngine TestTuesdayTrackEngine.cpp)
register_sequencer_test(TestTuesdayTrackEnginePrimeMask TestTuesdayTrackEnginePrimeMask.cpp)
register_sequencer_test(TestTuesdayTrackBurstMasking TestTuesdayTrackBurstMasking.cpp)
register_sequencer_test(TestTuesdayTrackListModel TestTuesdayTrackListModel.cpp)
register_sequencer_test(TestTuesdayTrackPrimeMask TestTuesdayTrackPrimeMask.cpp)
register_sequencer_test(TestTuesdayTrackTimeMode TestTuesdayTrackTimeMode.cpp)
register_sequencer_test(TestTuesdayTrackMaskProgression TestTuesdayTrackMaskProgression.cpp)
register_sequencer_test(TestTuesdayTrackMaskParameter TestTuesdayTrackMaskParameter.cpp)
register_sequencer_test(TestTuesdayScaleQuantization TestTuesdayScaleQuantization.cpp)
register_sequencer_test(TestTuesdayAlgorithmNames TestTuesdayAlgorithmNames.cpp)
register_sequencer_test(TestTuesdayAlgorithmBuffers TestTuesdayAlgorithmBuffers.cpp)
register_sequencer_test(TestTuesdayAmbient TestTuesdayAmbient.cpp)
register_sequencer_test(TestTuesdayMinimal TestTuesdayMinimal.cpp)
register_sequencer_test(TestTuesdayDrill TestTuesdayDrill.cpp)
register_sequencer_test(TestTuesdayAcid TestTuesdayAcid.cpp)
register_sequencer_test(TestTuesdayKraft TestTuesdayKraft.cpp)
register_sequencer_test(TestTuesdayAphex TestTuesdayAphex.cpp)
register_sequencer_test(TestTuesdayAutech TestTuesdayAutech.cpp)
# register_sequencer_test(TestTuesdayGateOffset TestTuesdayGateOffset.cpp)
register_sequencer_test(TestTuesdayPolyrhythm TestTuesdayPolyrhythm.cpp)
register_sequencer_test(TestTuesdayTrackGateOffset TestTuesdayTrackGateOffset.cpp)
register_sequencer_test(TestTuesdayTrackEngineGateOffset TestTuesdayTrackEngineGateOffset.cpp)
register_sequencer_test(TestCurveTrackLfoShapes TestCurveTrackLfoShapes.cpp)
register_sequencer_test(TestCurveTrackLfoShapesIntegration TestCurveTrackLfoShapesIntegration.cpp)
# register_sequencer_test(TestCurveSequencePageF4Key TestCurveSequencePageF4Key.cpp)
# register_sequencer_test(TestCurveSequencePagePageKey TestCurveSequencePagePageKey.cpp)
register_sequencer_test(TestCurveTrackEnginePhase TestCurveTrackEnginePhase.cpp)
register_sequencer_test(TestCurveTrackEngineGlobalPhase TestCurveTrackEngineGlobalPhase.cpp)
# register_sequencer_test(TestOutputRotation TestOutputRotation.cpp)
register_sequencer_test(TestCurveTrackPatterns TestCurveTrackPatterns.cpp)
register_sequencer_test(TestTuesdayTrackPatterns TestTuesdayTrackPatterns.cpp)
register_sequencer_test(TestTuesdayPowerVelocity TestTuesdayPowerVelocity.cpp)
register_sequencer_test(TestTuesdayMicrogateSparsity TestTuesdayMicrogateSparsity.cpp)
# register_sequencer_test(TestTuesdayRefactor TestTuesdayRefactor.cpp)
