include_directories(../../../apps/sequencer)
include_directories(../../../apps/sequencer/model) # Add include for model files
include_directories(../../../../teletype/src)
include_directories(../../../../teletype/libavr32/src)
include_directories(../../../../platform/sim/sim)
include_directories(..) # Add current directory for utils

# Modify register_test to link against sequencer_shared
function(register_sequencer_test test file)
    add_executable(${test} ${file} ../../../apps/sequencer/model/TuesdaySequence.cpp)
    target_link_libraries(${test} core sequencer_shared) # Link against sequencer_shared
    platform_postprocess_executable(${test})
    add_test(NAME ${test} COMMAND ${test})
endfunction(register_sequencer_test)

# Tuesday tests are excluded from verification pending a fix (model drift —
# several no longer compile/pass). Flip to ON to re-enable them.
set(ENABLE_TUESDAY_TESTS OFF)
function(register_tuesday_test test file)
    if(ENABLE_TUESDAY_TESTS)
        register_sequencer_test(${test} ${file})
    endif()
endfunction(register_tuesday_test)

register_sequencer_test(TestCurve TestCurve.cpp)
register_sequencer_test(TestCurveTrack TestCurveTrack.cpp)
register_sequencer_test(TestCurveTrackSerialization TestCurveTrackSerialization.cpp)
register_sequencer_test(TestCurveWavefolderRouting TestCurveWavefolderRouting.cpp)
register_sequencer_test(TestScale TestScale.cpp)
register_sequencer_test(TestGeodeConfig TestGeodeConfig.cpp)
register_sequencer_test(TestAccumulator TestAccumulator.cpp)
register_sequencer_test(TestAccumulatorConfig TestAccumulatorConfig.cpp)
register_sequencer_test(TestAccumulatorOps TestAccumulatorOps.cpp)
register_sequencer_test(TestAccumulatorSerialization TestAccumulatorSerialization.cpp)
register_sequencer_test(TestStochasticSequenceSerialization TestStochasticSequenceSerialization.cpp)
register_sequencer_test(TestPhaseFluxSequenceSerialization TestPhaseFluxSequenceSerialization.cpp)
register_sequencer_test(TestPhaseFluxPowerBend TestPhaseFluxPowerBend.cpp)
# Disabled: references removed StageDivisorSlot members (Div1_16/Div1_32) from the
# pre-redesign divisor model; needs rework against current StageDivisorSlot semantics.
# register_sequencer_test(TestPhaseFluxCumulativeTable TestPhaseFluxCumulativeTable.cpp)
register_sequencer_test(TestPhaseFluxPerTickDerivation TestPhaseFluxPerTickDerivation.cpp)
register_sequencer_test(TestPhaseFluxTrackEngine TestPhaseFluxTrackEngine.cpp)
register_sequencer_test(TestPhaseFluxSize TestPhaseFluxSize.cpp)
register_sequencer_test(TestPhaseFluxRepeatWindow TestPhaseFluxRepeatWindow.cpp)
register_sequencer_test(TestPhaseFluxPipelineOrder TestPhaseFluxPipelineOrder.cpp)
register_sequencer_test(TestPhaseFluxLengthTransfer TestPhaseFluxLengthTransfer.cpp)
register_sequencer_test(TestStochasticDurationDictionary TestStochasticDurationDictionary.cpp)
register_sequencer_test(TestStochasticL1Macros TestStochasticL1Macros.cpp)
register_sequencer_test(TestStochasticGenerator TestStochasticGenerator.cpp)
register_sequencer_test(TestStochasticKeyedRng TestStochasticKeyedRng.cpp)
register_sequencer_test(TestStochasticCacheParity TestStochasticCacheParity.cpp)
register_sequencer_test(TestSortedQueue TestSortedQueue.cpp)
register_sequencer_test(TestNoteSequence TestNoteSequence.cpp)
register_sequencer_test(TestDiscreteMapSequence TestDiscreteMapSequence.cpp)
register_sequencer_test(TestCvRouteLaneGuard TestCvRouteLaneGuard.cpp)
register_sequencer_test(TestModulatorAdsrZeroTick TestModulatorAdsrZeroTick.cpp)
register_sequencer_test(TestModulatorReadSanitize TestModulatorReadSanitize.cpp)
register_sequencer_test(TestModulator TestModulator.cpp)
register_sequencer_test(TestModulatorParam TestModulatorParam.cpp)
register_sequencer_test(TestLinkingRemovalSerialization TestLinkingRemovalSerialization.cpp)
register_sequencer_test(TestWallClock TestWallClock.cpp)
register_sequencer_test(TestSlaveClockGuard TestSlaveClockGuard.cpp)
register_sequencer_test(TestRouteParam TestRouteParam.cpp)
register_sequencer_test(TestRouteApply TestRouteApply.cpp)
register_sequencer_test(TestRouteOverride TestRouteOverride.cpp)
register_sequencer_test(TestRouteGlobalOverride TestRouteGlobalOverride.cpp)
register_sequencer_test(TestRouteCombineScaleSource TestRouteCombineScaleSource.cpp)
register_sequencer_test(TestRouteBrowse TestRouteBrowse.cpp)
register_sequencer_test(TestRouteShaper TestRouteShaper.cpp)
register_sequencer_test(TestRouteResolve TestRouteResolve.cpp)
register_sequencer_test(TestRouteDraft TestRouteDraft.cpp)
register_sequencer_test(TestRouteGetterMigration TestRouteGetterMigration.cpp)
register_sequencer_test(TestRouteMidiLearn TestRouteMidiLearn.cpp)
register_sequencer_test(TestRouteShellTrigger TestRouteShellTrigger.cpp)
register_sequencer_test(TestGateRotation TestGateRotation.cpp)
register_sequencer_test(TestParamTableGlobal TestParamTableGlobal.cpp)
register_sequencer_test(TestParamTableNote TestParamTableNote.cpp)
register_sequencer_test(TestParamTableCurve TestParamTableCurve.cpp)
register_sequencer_test(TestParamTableIndexed TestParamTableIndexed.cpp)
register_sequencer_test(TestParamTableDiscreteMap TestParamTableDiscreteMap.cpp)
register_sequencer_test(TestParamTableMidiCv TestParamTableMidiCv.cpp)
register_sequencer_test(TestParamTableTuesday TestParamTableTuesday.cpp)
register_sequencer_test(TestParamTableStochastic TestParamTableStochastic.cpp)
register_sequencer_test(TestParamTablePhaseFlux TestParamTablePhaseFlux.cpp)
register_sequencer_test(TestParamRegistry TestParamRegistry.cpp)
# Disabled: requires complex mock dependencies for hardware drivers
# register_sequencer_test(TestNoteTrackEngine TestNoteTrackEngine.cpp)
# register_sequencer_test(TestAccumulatorModulation TestAccumulatorModulation.cpp)
register_sequencer_test(TestPulseCount TestPulseCount.cpp)
register_sequencer_test(TestGateMode TestGateMode.cpp)
register_sequencer_test(TestGateStruct TestGateStruct.cpp)
register_sequencer_test(TestRTrigAccumTicking TestRTrigAccumTicking.cpp)
register_sequencer_test(TestRTrigEdgeCases TestRTrigEdgeCases.cpp)
register_sequencer_test(TestCompilationFlags TestCompilationFlags.cpp)
# Disabled: experimental test with outdated API calls
# register_sequencer_test(TestRTrigSpreadAccumTiming TestRTrigSpreadAccumTiming.cpp)
register_sequencer_test(TestHarmonyEngine TestHarmonyEngine.cpp)
register_sequencer_test(TestHarmonyIntegration TestHarmonyIntegration.cpp)
register_sequencer_test(TestHarmonyInversionIssue TestHarmonyInversionIssue.cpp)
register_sequencer_test(TestHarmonyInversionBug TestHarmonyInversionBug.cpp)
register_sequencer_test(TestHarmonyVoicing TestHarmonyVoicing.cpp)
register_sequencer_test(TestModel TestModel.cpp)
register_sequencer_test(TestTeletypeTrackNoText TestTeletypeTrackNoText.cpp)
register_sequencer_test(TestTeletypeV2ParserContract TestTeletypeV2ParserContract.cpp)
register_sequencer_test(TestTeletypeV2Lowering TestTeletypeV2Lowering.cpp)
register_sequencer_test(TestTeletypeV2Evaluator TestTeletypeV2Evaluator.cpp)
register_sequencer_test(TestTeletypeV2NativeOps TestTeletypeV2NativeOps.cpp)
register_sequencer_test(TestTeletypeV2ScriptRunner TestTeletypeV2ScriptRunner.cpp)
register_sequencer_test(TestTeletypeV2TrackEngineSmoke TestTeletypeV2TrackEngineSmoke.cpp)
register_sequencer_test(TestTeletypeV2RealScript TestTeletypeV2RealScript.cpp)
register_sequencer_test(TestTeletypeV2Delay TestTeletypeV2Delay.cpp)
register_sequencer_test(TestTeletypeV2Geode TestTeletypeV2Geode.cpp)
register_sequencer_test(TestTeletypeV2Modulator TestTeletypeV2Modulator.cpp)
register_sequencer_test(TestTeletypeV2Metro TestTeletypeV2Metro.cpp)
register_sequencer_test(TestTeletypeV2BreakKill TestTeletypeV2BreakKill.cpp)
register_sequencer_test(TestTeletypeV2Queue TestTeletypeV2Queue.cpp)
register_sequencer_test(TestTeletypeV2Stack TestTeletypeV2Stack.cpp)
register_sequencer_test(TestTeletypeV2Pattern TestTeletypeV2Pattern.cpp)
register_sequencer_test(TestTeletypeV2TriggerInput TestTeletypeV2TriggerInput.cpp)
register_sequencer_test(TestTeletypeV2OutputShaping TestTeletypeV2OutputShaping.cpp)
register_sequencer_test(TestTeletypeV2Input TestTeletypeV2Input.cpp)
register_sequencer_test(TestTeletypeV2Language TestTeletypeV2Language.cpp)
register_sequencer_test(TestTeletypeV2Pitch TestTeletypeV2Pitch.cpp)
register_sequencer_test(TestTeletypeV2Bitwise TestTeletypeV2Bitwise.cpp)
register_sequencer_test(TestTeletypeV2Function TestTeletypeV2Function.cpp)
register_sequencer_test(TestTeletypeV2Turtle TestTeletypeV2Turtle.cpp)
register_sequencer_test(TestTeletypeV2Parity TestTeletypeV2Parity.cpp)
register_sequencer_test(TestTeletypeV2Midi TestTeletypeV2Midi.cpp)
register_tuesday_test(TestTuesdayTrack TestTuesdayTrack.cpp)
register_tuesday_test(TestTuesdayTrackIntegration TestTuesdayTrackIntegration.cpp)
register_tuesday_test(TestTuesdayTrackEngine TestTuesdayTrackEngine.cpp)
# Disabled: stale API (wrong Engine ctor, private setTrackMode, renamed
# discreteMapSequence accessor); pre-existing rot, needs rework.
# register_sequencer_test(TestDiscreteMapTrackEngine TestDiscreteMapTrackEngine.cpp)
register_tuesday_test(TestTuesdayTrackEnginePrimeMask TestTuesdayTrackEnginePrimeMask.cpp)
register_tuesday_test(TestTuesdayTrackBurstMasking TestTuesdayTrackBurstMasking.cpp)
register_tuesday_test(TestTuesdayTrackListModel TestTuesdayTrackListModel.cpp)
register_tuesday_test(TestTuesdayTrackPrimeMask TestTuesdayTrackPrimeMask.cpp)
register_tuesday_test(TestTuesdayTrackTimeMode TestTuesdayTrackTimeMode.cpp)
register_tuesday_test(TestTuesdayTrackMaskProgression TestTuesdayTrackMaskProgression.cpp)
register_tuesday_test(TestTuesdayTrackMaskParameter TestTuesdayTrackMaskParameter.cpp)
register_tuesday_test(TestTuesdayScaleQuantization TestTuesdayScaleQuantization.cpp)
register_tuesday_test(TestTuesdayAlgorithmNames TestTuesdayAlgorithmNames.cpp)
register_tuesday_test(TestTuesdayAlgorithmBuffers TestTuesdayAlgorithmBuffers.cpp)
register_tuesday_test(TestTuesdayAmbient TestTuesdayAmbient.cpp)
register_tuesday_test(TestTuesdayMinimal TestTuesdayMinimal.cpp)
register_tuesday_test(TestTuesdayDrill TestTuesdayDrill.cpp)
register_tuesday_test(TestTuesdayAcid TestTuesdayAcid.cpp)
register_tuesday_test(TestTuesdayKraft TestTuesdayKraft.cpp)
register_tuesday_test(TestTuesdayAphex TestTuesdayAphex.cpp)
register_tuesday_test(TestTuesdayAutech TestTuesdayAutech.cpp)
# register_sequencer_test(TestTuesdayGateOffset TestTuesdayGateOffset.cpp)
register_tuesday_test(TestTuesdayPolyrhythm TestTuesdayPolyrhythm.cpp)
register_tuesday_test(TestTuesdayTrackGateOffset TestTuesdayTrackGateOffset.cpp)
register_tuesday_test(TestTuesdayTrackEngineGateOffset TestTuesdayTrackEngineGateOffset.cpp)
register_sequencer_test(TestCurveTrackLfoShapes TestCurveTrackLfoShapes.cpp)
register_sequencer_test(TestCurveTrackLfoShapesIntegration TestCurveTrackLfoShapesIntegration.cpp)
# register_sequencer_test(TestCurveSequencePageF4Key TestCurveSequencePageF4Key.cpp)
# register_sequencer_test(TestCurveSequencePagePageKey TestCurveSequencePagePageKey.cpp)
register_sequencer_test(TestCurveTrackEnginePhase TestCurveTrackEnginePhase.cpp)
register_sequencer_test(TestCurveTrackEngineGlobalPhase TestCurveTrackEngineGlobalPhase.cpp)
# register_sequencer_test(TestOutputRotation TestOutputRotation.cpp)
register_sequencer_test(TestCurveTrackPatterns TestCurveTrackPatterns.cpp)
register_tuesday_test(TestTuesdayTrackPatterns TestTuesdayTrackPatterns.cpp)
register_tuesday_test(TestTuesdayPowerVelocity TestTuesdayPowerVelocity.cpp)
register_tuesday_test(TestTuesdayMicrogateSparsity TestTuesdayMicrogateSparsity.cpp)
# register_sequencer_test(TestTuesdayRefactor TestTuesdayRefactor.cpp)
